--- a/terceiro-desafio-fluxo-de-decisao/index.html
+++ b/terceiro-desafio-fluxo-de-decisao/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio 2</title>
+    <title>Desafio 3</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><img src="logo.png" alt="Logo do Desafio"></h1>
-    <p id="texto"></p>
-    <p id="texto2"></p> 
+    <p>Esse foi o desafio 3/7 do #7DaysOfCode - Lógica JS - Fluxo de decisão </p>
 </body>
     <script src="app.js"></script>
 </html>
